
if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
    message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
endif()

SET(STM32_CHIP STM32F769NIH)
SET(STM32Cube_DIR STM32Cube)
SET(CMAKE_MODULE_PATH cmake)
SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_MODULE_PATH}/gcc_stm32.cmake)

SET(STM32_MIN_HEAP_SIZE 0x20000)
SET(STM32_MIN_STACK_SIZE 0x2000)

PROJECT(tdc74vxs4-blinky C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS gpio REQUIRED)

INCLUDE_DIRECTORIES(
#    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
   Inc
   Src
)

file(GLOB_RECURSE USER_SOURCES
   Src/*.c
)
file(GLOB_RECURSE USER_INCLUDES
   Inc/*.h
   Src/*.h
)

SET(PROJECT_SOURCES
    ${USER_SOURCES}
    ${USER_INCLUDES}
)


SET(ELF ${CMAKE_PROJECT_NAME}.elf)
ADD_EXECUTABLE(${ELF}
    ${CMSIS_SOURCES}
    ${STM32HAL_SOURCES}
    ${PROJECT_SOURCES}
)
TARGET_LINK_LIBRARIES(${ELF})
STM32_SET_TARGET_PROPERTIES(${ELF})
STM32_ADD_HEX_BIN_TARGETS(${ELF})
STM32_PRINT_SIZE_OF_TARGETS(${ELF})
